# WHS-Assingment-securecoding

./: .gitignore  run.py
code/: app.py  db.py  pyproject.toml
code/items/: __init__.py  recent.py  register.py
code/templates/: base.html  index.html
code/templates/items/: register.html
code/templates/users/: login.html  register.html
code/users/: __init__.py  login.py  register.py
project/: app.py  db.py  pyproject.toml  requirements.txt
project/admin/: __init__.py  items.py  reports.py  users.py
project/items/: __init__.py  inspect.py  mine.py  recent.py  register.py  search.py
project/report/: __init__.py  report.py
project/static/uploads/: 478d1a04-f560-4ee3-b021-08d222fdb99f
project/templates/: base.html  index.html
project/templates/admin/: admin_index.html  items_list.html  reports_list.html  reports_list_resolved.html  users_list.html
project/templates/items/: details.html  mine.html  register.html  search.html
project/templates/reports/: report.html
project/templates/users/: login.html  mypage.html  register.html
project/users/: __init__.py  login.py  mypage.py  register.py
tests/: config.py  requirements.txt  test_admin.py  test_chat.py  test_index.py  test_item_inspect.py  test_item_myitems.py  test_item_register.py  test_item_search.py  test_report.py  test_user_mypage.py  test_user_register.py
