[project]
name = "tiny-second-hand-shop"
version = "0.0.1"
description = "A tiny second-hand shop web application"
authors = [
    { name = "Kyungjun Lee" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "flask",
    "flask_socketio",
    "Flask-SQLAlchemy"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
